<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context="com.example.android.jaldi5.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgLogoname"
        app:srcCompat="@drawable/hi_5_200_75" />

    <TableLayout
        android:id="@+id/main_table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/curvedborder"
        android:stretchColumns="0,1"></TableLayout>

    <LinearLayout
        android:id="@+id/lblTblGenNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnGenNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblBtnGenNumber" />

       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblGenNumber"
            android:textSize="30dp"
            android:text="@string/lblGenNumber" />

    </LinearLayout>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblBtnExit" />

    <Button
        android:id="@+id/btnGameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblBtnGameOver" />
</LinearLayout>
